<resources>
    <string name="app_name">FitnessApp</string>
    <string name="error">Error</string>
    <string name="day_1_button">Day 1 Button</string>
    <string name="day_2_button">Day 2 Button</string>
    <string name="day_3_button">Day 3 Button</string>
    <string name="day_4_button">Day 4 Button</string>
    <string name="day_5_button">Day 5 Button</string>
    <string name="day_6_button">Day 6 Button</string>
    <string name="day_7_button">Day 7 Button</string>
    <string name="custom_image_spinner_row">Custom Image Spinner Row</string>
    <string name="fitness_tracker_banner">Fitness Tracker Banner</string>
    <string name="week_banner">Week Banner</string>
</resources>
